--- a/photto_app_api/package.json
+++ b/photto_app_api/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "firebase": "^9.6.10",
+    "firebase-admin": "^10.0.2",
     "mongoose": "^6.2.4",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
