--- a/photto_panel_api/package.json
+++ b/photto_panel_api/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.5",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
-} 
+}
